# ai-ui-vibe

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  eval-RSn-2026-03-29T17_28_28.json  promptfooconfig.yaml  pyproject.toml
.continue/rules/: 01-global.md  02-app.md  03-tests.md
app/: config.py  main.py
app/llm/: ollama_client.py  rag_pipeline.py
app/ui/: chat.py
app/utils/: chunking.py
tests/: test_llm.py
