[project]
name = "my-chat-app"
version = "0.1.0"
description = "Chat interface for Ollama models"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.10.0",
    "ollama>=0.1.0",
    "pypdf2>=3.0.1",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.uv]
package = false
